Ajout du code pour le CPI dans le fichier principal

--- a/Stat'App- test données.ipynb
+++ b/Stat'App- test données.ipynb
@@ -1399,6 +1399,36 @@
     "print(df_ST_IR_pivot.head())\n",
     "print (df_ST_IR_pivot)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A ne pas supprimer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ne pas cuppromer ça \n",
+    "import pandas as pd\n",
+    "\n",
+    "# décompresser le fichier qui était en .gz\n",
+    "df_cpi = pd.read_csv(\"estat_prc_hicp_midx_filtered_en.csv.gz\", compression=\"gzip\")\n",
+    "print(df_cpi.head())\n",
+    "\n",
+    "# Sélectionner les variables utiles\n",
+    "df_cpi = df_cpi[['coicop','geo', 'TIME_PERIOD', 'OBS_VALUE']]\n",
+    "print(df_cpi.head())\n",
+    "print(df_cpi['coicop'].unique())\n",
+    "\n",
+    "# mettre les deux variables de cpi différentes dans deux colonnes (car actuellement elles sont en ligne : voir la variable coicop))\n",
+    "df_cpi_pivot = df_cpi.pivot(index=['geo', 'TIME_PERIOD'], columns='coicop', values='OBS_VALUE')\n",
+    "print(df_cpi_pivot.head())"
+   ]
   }
  ],
  "metadata": {
