modification du cpi

--- a/Stat'App- test données.ipynb
+++ b/Stat'App- test données.ipynb
@@ -1409,11 +1409,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                   DATAFLOW        LAST UPDATE     freq             unit  \\\n",
+      "0  ESTAT:PRC_HICP_MIDX(1.0)  03/02/25 11:00:00  Monthly  Index, 2015=100   \n",
+      "1  ESTAT:PRC_HICP_MIDX(1.0)  03/02/25 11:00:00  Monthly  Index, 2015=100   \n",
+      "2  ESTAT:PRC_HICP_MIDX(1.0)  03/02/25 11:00:00  Monthly  Index, 2015=100   \n",
+      "3  ESTAT:PRC_HICP_MIDX(1.0)  03/02/25 11:00:00  Monthly  Index, 2015=100   \n",
+      "4  ESTAT:PRC_HICP_MIDX(1.0)  03/02/25 11:00:00  Monthly  Index, 2015=100   \n",
+      "\n",
+      "           coicop      geo TIME_PERIOD  OBS_VALUE OBS_FLAG  CONF_STATUS  \n",
+      "0  All-items HICP  Albania     2015-12     100.00        d          NaN  \n",
+      "1  All-items HICP  Albania     2016-01     101.00        d          NaN  \n",
+      "2  All-items HICP  Albania     2016-02     102.28        d          NaN  \n",
+      "3  All-items HICP  Albania     2016-03     102.80        d          NaN  \n",
+      "4  All-items HICP  Albania     2016-04     102.31        d          NaN  \n",
+      "           coicop      geo TIME_PERIOD  OBS_VALUE\n",
+      "0  All-items HICP  Albania     2015-12     100.00\n",
+      "1  All-items HICP  Albania     2016-01     101.00\n",
+      "2  All-items HICP  Albania     2016-02     102.28\n",
+      "3  All-items HICP  Albania     2016-03     102.80\n",
+      "4  All-items HICP  Albania     2016-04     102.31\n",
+      "['All-items HICP'\n",
+      " 'Overall index excluding energy, food, alcohol and tobacco']\n",
+      "coicop               All-items HICP  \\\n",
+      "geo     TIME_PERIOD                   \n",
+      "Albania 2015-12              100.00   \n",
+      "        2016-01              101.00   \n",
+      "        2016-02              102.28   \n",
+      "        2016-03              102.80   \n",
+      "        2016-04              102.31   \n",
+      "\n",
+      "coicop               Overall index excluding energy, food, alcohol and tobacco  \n",
+      "geo     TIME_PERIOD                                                             \n",
+      "Albania 2015-12                                                 100.00          \n",
+      "        2016-01                                                  99.85          \n",
+      "        2016-02                                                  99.79          \n",
+      "        2016-03                                                  99.84          \n",
+      "        2016-04                                                  99.92          \n"
+     ]
+    }
+   ],
    "source": [
-    "# ne pas cuppromer ça \n",
+    "# ne pas cupprimer ça \n",
     "import pandas as pd\n",
     "\n",
     "# décompresser le fichier qui était en .gz\n",
@@ -1427,7 +1470,8 @@
     "\n",
     "# mettre les deux variables de cpi différentes dans deux colonnes (car actuellement elles sont en ligne : voir la variable coicop))\n",
     "df_cpi_pivot = df_cpi.pivot(index=['geo', 'TIME_PERIOD'], columns='coicop', values='OBS_VALUE')\n",
-    "print(df_cpi_pivot.head())"
+    "print(df_cpi_pivot.head())\n",
+    "df_cpi_pivot = df_cpi_pivot.reset_index()\n"
    ]
   }
  ],
