petite modif sur un df des taux d'intérêts

--- a/Stat'App- test données.ipynb
+++ b/Stat'App- test données.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9004,7 +9004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -9236,8 +9236,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import du CPI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -9303,406 +9310,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Import des taux d'intérêts (long terme et court terme)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Taux court terme : \"Les données se réfèrent aux bons acceptés par la banque/Certificats de dépôt négociables-3 mois.\"\n",
+    "Taux long terme : \"Les données se réfèrent au taux de rendement estimé en clôture des obligations du trésor à 10 ans.\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['Zone de référence', 'TIME_PERIOD', 'Mesure', 'OBS_VALUE'], dtype='object')\n"
+      "Index(['Zone de référence', 'TIME_PERIOD', 'Mesure', 'OBS_VALUE'], dtype='object')\n",
+      "[\"Taux d'intérèt à long court\" \"Taux d'intérèt à long terme\"]\n"
      ]
     },
     {
      "data": {
-      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
-       "columns": [
-        {
-         "name": "index",
-         "rawType": "int64",
-         "type": "integer"
-        },
-        {
-         "name": "Zone de référence",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "TIME_PERIOD",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "Mesure",
-         "rawType": "object",
-         "type": "string"
-        },
-        {
-         "name": "OBS_VALUE",
-         "rawType": "float64",
-         "type": "float"
-        }
-       ],
-       "conversionMethod": "pd.DataFrame",
-       "ref": "8b7c71b3-25f0-45b5-b3c9-80448d0f19e8",
-       "rows": [
-        [
-         "0",
-         "Danemark",
-         "2022-01",
-         "Taux d'intérèt à long court",
-         "-0.2947762"
-        ],
-        [
-         "1",
-         "Danemark",
-         "2022-02",
-         "Taux d'intérèt à long court",
-         "-0.27"
-        ],
-        [
-         "2",
-         "Irlande",
-         "1995-03",
-         "Taux d'intérèt à long terme",
-         "8.7955"
-        ],
-        [
-         "3",
-         "Irlande",
-         "1995-04",
-         "Taux d'intérèt à long terme",
-         "8.6967"
-        ],
-        [
-         "4",
-         "Irlande",
-         "1995-05",
-         "Taux d'intérèt à long terme",
-         "8.3373"
-        ],
-        [
-         "5",
-         "Danemark",
-         "2016-11",
-         "Taux d'intérèt à long court",
-         "-0.18375"
-        ],
-        [
-         "6",
-         "Danemark",
-         "2016-12",
-         "Taux d'intérèt à long court",
-         "-0.2028571"
-        ],
-        [
-         "7",
-         "Irlande",
-         "1995-08",
-         "Taux d'intérèt à long terme",
-         "8.1473"
-        ],
-        [
-         "8",
-         "Irlande",
-         "1995-09",
-         "Taux d'intérèt à long terme",
-         "7.9586"
-        ],
-        [
-         "9",
-         "Irlande",
-         "1995-10",
-         "Taux d'intérèt à long terme",
-         "7.9871"
-        ],
-        [
-         "10",
-         "Irlande",
-         "1995-11",
-         "Taux d'intérèt à long terme",
-         "7.6318"
-        ],
-        [
-         "11",
-         "Irlande",
-         "1995-12",
-         "Taux d'intérèt à long terme",
-         "7.375"
-        ],
-        [
-         "12",
-         "Irlande",
-         "1996-01",
-         "Taux d'intérèt à long terme",
-         "7.2323"
-        ],
-        [
-         "13",
-         "Irlande",
-         "1996-02",
-         "Taux d'intérèt à long terme",
-         "7.491"
-        ],
-        [
-         "14",
-         "Irlande",
-         "1996-03",
-         "Taux d'intérèt à long terme",
-         "7.8185"
-        ],
-        [
-         "15",
-         "Irlande",
-         "1996-04",
-         "Taux d'intérèt à long terme",
-         "7.6055"
-        ],
-        [
-         "16",
-         "Irlande",
-         "1996-05",
-         "Taux d'intérèt à long terme",
-         "7.4964"
-        ],
-        [
-         "17",
-         "Irlande",
-         "1995-01",
-         "Taux d'intérèt à long terme",
-         "8.79"
-        ],
-        [
-         "18",
-         "Irlande",
-         "1995-02",
-         "Taux d'intérèt à long terme",
-         "8.6745"
-        ],
-        [
-         "19",
-         "Irlande",
-         "1996-09",
-         "Taux d'intérèt à long terme",
-         "7.2148"
-        ],
-        [
-         "20",
-         "Irlande",
-         "1996-10",
-         "Taux d'intérèt à long terme",
-         "6.7759"
-        ],
-        [
-         "21",
-         "Irlande",
-         "1996-11",
-         "Taux d'intérèt à long terme",
-         "6.6843"
-        ],
-        [
-         "22",
-         "Irlande",
-         "1996-12",
-         "Taux d'intérèt à long terme",
-         "6.6126"
-        ],
-        [
-         "23",
-         "Irlande",
-         "1997-01",
-         "Taux d'intérèt à long terme",
-         "6.59"
-        ],
-        [
-         "24",
-         "Irlande",
-         "1997-02",
-         "Taux d'intérèt à long terme",
-         "6.3255"
-        ],
-        [
-         "25",
-         "Irlande",
-         "1997-03",
-         "Taux d'intérèt à long terme",
-         "6.6217"
-        ],
-        [
-         "26",
-         "Irlande",
-         "1997-04",
-         "Taux d'intérèt à long terme",
-         "6.6905"
-        ],
-        [
-         "27",
-         "Irlande",
-         "1997-05",
-         "Taux d'intérèt à long terme",
-         "6.5533"
-        ],
-        [
-         "28",
-         "Irlande",
-         "1997-06",
-         "Taux d'intérèt à long terme",
-         "6.4915"
-        ],
-        [
-         "29",
-         "Irlande",
-         "1997-07",
-         "Taux d'intérèt à long terme",
-         "6.2587"
-        ],
-        [
-         "30",
-         "Irlande",
-         "1997-08",
-         "Taux d'intérèt à long terme",
-         "6.33"
-        ],
-        [
-         "31",
-         "Irlande",
-         "1997-09",
-         "Taux d'intérèt à long terme",
-         "6.1032"
-        ],
-        [
-         "32",
-         "Irlande",
-         "1997-10",
-         "Taux d'intérèt à long terme",
-         "5.9945"
-        ],
-        [
-         "33",
-         "Irlande",
-         "1997-11",
-         "Taux d'intérèt à long terme",
-         "5.978"
-        ],
-        [
-         "34",
-         "Irlande",
-         "1997-12",
-         "Taux d'intérèt à long terme",
-         "5.6065"
-        ],
-        [
-         "35",
-         "Irlande",
-         "1998-01",
-         "Taux d'intérèt à long terme",
-         "5.3476"
-        ],
-        [
-         "36",
-         "Irlande",
-         "1998-02",
-         "Taux d'intérèt à long terme",
-         "5.227"
-        ],
-        [
-         "37",
-         "Irlande",
-         "1998-03",
-         "Taux d'intérèt à long terme",
-         "5.079"
-        ],
-        [
-         "38",
-         "Irlande",
-         "1998-04",
-         "Taux d'intérèt à long terme",
-         "5.048"
-        ],
-        [
-         "39",
-         "Irlande",
-         "1998-05",
-         "Taux d'intérèt à long terme",
-         "5.1385"
-        ],
-        [
-         "40",
-         "Irlande",
-         "1998-06",
-         "Taux d'intérèt à long terme",
-         "5.0271"
-        ],
-        [
-         "41",
-         "Irlande",
-         "1998-07",
-         "Taux d'intérèt à long terme",
-         "4.9252"
-        ],
-        [
-         "42",
-         "Irlande",
-         "1998-08",
-         "Taux d'intérèt à long terme",
-         "4.6755"
-        ],
-        [
-         "43",
-         "Irlande",
-         "1995-06",
-         "Taux d'intérèt à long terme",
-         "8.2557"
-        ],
-        [
-         "44",
-         "Irlande",
-         "1995-07",
-         "Taux d'intérèt à long terme",
-         "8.3933"
-        ],
-        [
-         "45",
-         "Irlande",
-         "1999-02",
-         "Taux d'intérèt à long terme",
-         "4.0235"
-        ],
-        [
-         "46",
-         "Irlande",
-         "1999-03",
-         "Taux d'intérèt à long terme",
-         "4.1878"
-        ],
-        [
-         "47",
-         "Irlande",
-         "1999-04",
-         "Taux d'intérèt à long terme",
-         "3.9468"
-        ],
-        [
-         "48",
-         "Irlande",
-         "1999-05",
-         "Taux d'intérèt à long terme",
-         "4.1819"
-        ],
-        [
-         "49",
-         "Irlande",
-         "1999-06",
-         "Taux d'intérèt à long terme",
-         "4.5855"
-        ]
-       ],
-       "shape": {
-        "columns": 4,
-        "rows": 19192
-       }
-      },
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -9721,48 +9357,48 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
+       "      <th>Mesure</th>\n",
        "      <th>Zone de référence</th>\n",
        "      <th>TIME_PERIOD</th>\n",
-       "      <th>Mesure</th>\n",
-       "      <th>OBS_VALUE</th>\n",
+       "      <th>Taux d'intérèt à court terme</th>\n",
+       "      <th>Taux d'intérèt à long terme</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Danemark</td>\n",
-       "      <td>2022-01</td>\n",
-       "      <td>Taux d'intérèt à long court</td>\n",
-       "      <td>-0.294776</td>\n",
+       "      <td>Allemagne</td>\n",
+       "      <td>1995-01</td>\n",
+       "      <td>5.160000</td>\n",
+       "      <td>7.595909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Danemark</td>\n",
-       "      <td>2022-02</td>\n",
-       "      <td>Taux d'intérèt à long court</td>\n",
-       "      <td>-0.270000</td>\n",
+       "      <td>Allemagne</td>\n",
+       "      <td>1995-02</td>\n",
+       "      <td>5.100000</td>\n",
+       "      <td>7.424000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Irlande</td>\n",
+       "      <td>Allemagne</td>\n",
        "      <td>1995-03</td>\n",
-       "      <td>Taux d'intérèt à long terme</td>\n",
-       "      <td>8.795500</td>\n",
+       "      <td>5.070000</td>\n",
+       "      <td>7.277391</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Irlande</td>\n",
+       "      <td>Allemagne</td>\n",
        "      <td>1995-04</td>\n",
-       "      <td>Taux d'intérèt à long terme</td>\n",
-       "      <td>8.696700</td>\n",
+       "      <td>4.680000</td>\n",
+       "      <td>7.088333</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Irlande</td>\n",
+       "      <td>Allemagne</td>\n",
        "      <td>1995-05</td>\n",
-       "      <td>Taux d'intérèt à long terme</td>\n",
-       "      <td>8.337300</td>\n",
+       "      <td>4.590000</td>\n",
+       "      <td>6.862381</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -9772,63 +9408,76 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19187</th>\n",
-       "      <td>Danemark</td>\n",
-       "      <td>2021-08</td>\n",
-       "      <td>Taux d'intérèt à long court</td>\n",
-       "      <td>-0.210000</td>\n",
+       "      <th>10073</th>\n",
+       "      <td>Tchéquie</td>\n",
+       "      <td>2024-09</td>\n",
+       "      <td>4.300476</td>\n",
+       "      <td>3.768057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19188</th>\n",
-       "      <td>Danemark</td>\n",
-       "      <td>2021-09</td>\n",
-       "      <td>Taux d'intérèt à long court</td>\n",
-       "      <td>-0.214250</td>\n",
+       "      <th>10074</th>\n",
+       "      <td>Tchéquie</td>\n",
+       "      <td>2024-10</td>\n",
+       "      <td>4.132273</td>\n",
+       "      <td>3.982299</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19189</th>\n",
-       "      <td>Danemark</td>\n",
-       "      <td>2021-10</td>\n",
-       "      <td>Taux d'intérèt à long court</td>\n",
-       "      <td>-0.276343</td>\n",
+       "      <th>10075</th>\n",
+       "      <td>Tchéquie</td>\n",
+       "      <td>2024-11</td>\n",
+       "      <td>3.945238</td>\n",
+       "      <td>4.104026</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19190</th>\n",
-       "      <td>Danemark</td>\n",
-       "      <td>2021-11</td>\n",
-       "      <td>Taux d'intérèt à long court</td>\n",
-       "      <td>-0.275238</td>\n",
+       "      <th>10076</th>\n",
+       "      <td>Tchéquie</td>\n",
+       "      <td>2024-12</td>\n",
+       "      <td>3.906667</td>\n",
+       "      <td>4.133104</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>19191</th>\n",
-       "      <td>Danemark</td>\n",
-       "      <td>2021-12</td>\n",
-       "      <td>Taux d'intérèt à long court</td>\n",
-       "      <td>-0.272867</td>\n",
+       "      <th>10077</th>\n",
+       "      <td>Tchéquie</td>\n",
+       "      <td>2025-01</td>\n",
+       "      <td>3.882857</td>\n",
+       "      <td>4.195977</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>19192 rows × 4 columns</p>\n",
+       "<p>10078 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Zone de référence TIME_PERIOD                       Mesure  OBS_VALUE\n",
-       "0              Danemark     2022-01  Taux d'intérèt à long court  -0.294776\n",
-       "1              Danemark     2022-02  Taux d'intérèt à long court  -0.270000\n",
-       "2               Irlande     1995-03  Taux d'intérèt à long terme   8.795500\n",
-       "3               Irlande     1995-04  Taux d'intérèt à long terme   8.696700\n",
-       "4               Irlande     1995-05  Taux d'intérèt à long terme   8.337300\n",
-       "...                 ...         ...                          ...        ...\n",
-       "19187          Danemark     2021-08  Taux d'intérèt à long court  -0.210000\n",
-       "19188          Danemark     2021-09  Taux d'intérèt à long court  -0.214250\n",
-       "19189          Danemark     2021-10  Taux d'intérèt à long court  -0.276343\n",
-       "19190          Danemark     2021-11  Taux d'intérèt à long court  -0.275238\n",
-       "19191          Danemark     2021-12  Taux d'intérèt à long court  -0.272867\n",
+       "Mesure Zone de référence TIME_PERIOD  Taux d'intérèt à court terme  \\\n",
+       "0              Allemagne     1995-01                      5.160000   \n",
+       "1              Allemagne     1995-02                      5.100000   \n",
+       "2              Allemagne     1995-03                      5.070000   \n",
+       "3              Allemagne     1995-04                      4.680000   \n",
+       "4              Allemagne     1995-05                      4.590000   \n",
+       "...                  ...         ...                           ...   \n",
+       "10073           Tchéquie     2024-09                      4.300476   \n",
+       "10074           Tchéquie     2024-10                      4.132273   \n",
+       "10075           Tchéquie     2024-11                      3.945238   \n",
+       "10076           Tchéquie     2024-12                      3.906667   \n",
+       "10077           Tchéquie     2025-01                      3.882857   \n",
        "\n",
-       "[19192 rows x 4 columns]"
+       "Mesure  Taux d'intérèt à long terme  \n",
+       "0                          7.595909  \n",
+       "1                          7.424000  \n",
+       "2                          7.277391  \n",
+       "3                          7.088333  \n",
+       "4                          6.862381  \n",
+       "...                             ...  \n",
+       "10073                      3.768057  \n",
+       "10074                      3.982299  \n",
+       "10075                      4.104026  \n",
+       "10076                      4.133104  \n",
+       "10077                      4.195977  \n",
+       "\n",
+       "[10078 rows x 4 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9841,16 +9490,20 @@
     "# Sélectionner les variables utiles\n",
     "df_tx_int = df_tx_int[['Zone de référence', 'TIME_PERIOD', 'Mesure', 'OBS_VALUE']]\n",
     "print(df_tx_int.columns)\n",
+    "print(df_tx_int['Mesure'].unique())\n",
     "\n",
+    "# mettre les deux variables de taux d'intérêts différentes dans deux colonnes \n",
+    "df_tx_int_pivot = df_tx_int.pivot(index=['Zone de référence', 'TIME_PERIOD'], columns='Mesure', values='OBS_VALUE')\n",
+    "df_tx_int_pivot = df_tx_int_pivot.reset_index()\n",
+    "df_tx_int_pivot = df_tx_int_pivot.rename(columns={\"Taux d'intérèt à long court\":\"Taux d'intérèt à court terme\"})\n",
     "\n",
-    "\n",
-    "df_tx_int"
+    "df_tx_int_pivot"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -9864,7 +9517,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
